--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,7 +53,7 @@ posts.splice(2)
     </div>
   </section>
   <section class="mt-20 max-w-2xl mx-auto px-6">
-    <h2 class="mb-8">What I Write</h2>
+    <h2 class="mb-8">Latest Posts</h2>
     <div class="grid grid-cols-1 gap-10 sm:gap-6 mb-10">
       {
         posts.map((post) => (
@@ -89,7 +89,7 @@ posts.splice(2)
   </section>
   {homePageContent.currentlyReading && homePageContent.currentlyReading.length > 0 && (
     <section class="mt-20 max-w-2xl mx-auto px-6 mb-20">
-      <h2 class="mb-8">What I Read</h2>
+      <h2 class="mb-8">Recent Reads</h2>
       <ul class="space-y-4">
         {homePageContent.currentlyReading.map((book) => (
           <li class="flex items-baseline gap-2">
